crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_url_invalid_scheme.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Invalid URL
▷ key: indexer_url
▷ flag: --indexer-url
▷ url: not-a-valid-url.example
▷ reason: must start with http:// or https://
